[package]
name = "string2path"
version = "0.2.0"
edition = "2021"

rust-version = "1.70"

# TODO:
# Without specifying this, Cargo.lock's version is set to 4, which requires 
# Rust 1.78. But, resolve = "3" cannot be understood by Cargo with Rust 1.70.
# So, uncomment this when executing `cargo update`...
#
# resolver = "3"

[lib]
crate-type = ["staticlib", "lib"]

[features]
savvy_test = [] # to avoid warnings

[profile.release]
lto = true
panic = "abort"

[dependencies]
savvy = "0.8.5"
fontdb = "0.22"
lyon = "1.0"
once_cell = "1"
ttf-parser = "0.25"
