[package]
name = "string2path"
version = "0.2.0"
edition = "2024"

rust-version = "1.88"

[lib]
crate-type = ["staticlib", "lib"]

[features]
savvy_test = [] # to avoid warnings

[profile.release]
lto = true
panic = "abort"

[dependencies]
savvy = "0.9.4"
fontdb = "0.22"
lyon = "1.0"
once_cell = "1"
ttf-parser = "0.25"
