[package]
name = "string2path"
version = "0.2.0"
edition = "2024"

rust-version = "1.88"

[lib]
crate-type = ["staticlib", "lib"]

[features]
savvy_test = [] # to avoid warnings

[profile.release]
lto = true
panic = "abort"

[dependencies]
savvy = "0.10.0"
fontique = "0.8"
skrifa = "0.42"
lyon = "1.0"
i_overlay = "4.5.1"
